# libprom_client_c

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  config.h  config.h.in  config.status  configure  configure.ac  libtool
.github/workflows/: ci.yaml
autom4te.cache/: output.0  output.1  output.2  output.4  output.5  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5  traces.6
etc/: gha-helper.sh
example/: Makefile  main.c
prom/: Makefile  Makefile.am  Makefile.in  libprom.la
prom/.libs/: libprom.la  libprom.so.1  libprom.so.1.0.0
prom/include/: prom_collector.h
prom/src/: prom_collector.c  prom_collector.lo  prom_collector_registry.lo  prom_counter.lo  prom_gauge.lo  prom_histogram.lo  prom_histogram_buckets.c  prom_histogram_buckets.lo  prom_linked_list.c  prom_linked_list.lo  prom_log.lo  prom_map.c  prom_map.lo  prom_metric.lo  prom_metric_formatter.lo  prom_metric_sample.lo  prom_metric_sample_histogram.lo  prom_process_collector.lo  prom_process_fds.lo  prom_process_limits.lo  prom_process_stat.lo  prom_string_builder.lo
prom/src/.deps/: prom_collector.Plo  prom_collector_registry.Plo  prom_counter.Plo  prom_gauge.Plo  prom_histogram.Plo  prom_histogram_buckets.Plo  prom_linked_list.Plo  prom_log.Plo  prom_map.Plo  prom_metric.Plo  prom_metric_formatter.Plo  prom_metric_sample.Plo  prom_metric_sample_histogram.Plo  prom_process_collector.Plo  prom_process_fds.Plo  prom_process_limits.Plo  prom_process_stat.Plo  prom_string_builder.Plo
prom/test/: prom_collector_registry_test.c  prom_histogram_test.c
promhttp/: Makefile  Makefile.am  Makefile.in  libpromhttp.la
promhttp/.libs/: libpromhttp.la  libpromhttp.lai  libpromhttp.so.1.0.0
promhttp/src/: promhttp.c  promhttp.lo
promhttp/src/.deps/: promhttp.Plo
promtest/test/: promtest.c  promtest_helpers.h
